Fixed sidebar width causing wrap on front page

--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,5 +1,6 @@
 .sidebar {
 	display: none;
+	max-width: 25%;
 
 	ul li {
 		line-height: 1.5;
